@@ -84,12 +84,15 @@ typedef struct
 typedef enum
 {
   TS_ERROR_NONE         = 0,
-  TS_ERROR_TIMEOUT      = -1    // Timeout occured before a valid reading
+  TS_ERROR_TIMEOUT      = -1,   // Timeout occured before a valid reading
+  TS_ERROR_XYMISMATCH   = -2    // Unable to get a stable X/Y value
 } tsTouchError_t;
 
 // Method Prototypes
 void           tsInit ( void );
 void           tsCalibrate ( void );
 tsTouchError_t tsWaitForEvent(tsTouchData_t* data, uint32_t timeoutMS);
+int            tsSetThreshhold(uint8_t value);
+uint8_t        tsGetThreshhold(void);
 
 #endif
